--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,12 +35,14 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/UAS_LabPBO
 endorsed.classpath=
 excludes=
+file.reference.mysql-connector-j-8.3.0.jar=D:\\_Kuliah\\Semester_4\\Pemrograman Berorientasi Objek\\mysql-connector-j-8.3.0\\mysql-connector-j-8.3.0.jar
 file.reference.mysql-connector-j-8.4.0.jar=C:\\Users\\VIVOBOOK\\Downloads\\mysql-connector-j-8.4.0\\mysql-connector-j-8.4.0.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.MySQL_JDBC_DRIVER.classpath}:\
-    ${file.reference.mysql-connector-j-8.4.0.jar}
+    ${file.reference.mysql-connector-j-8.4.0.jar}:\
+    ${file.reference.mysql-connector-j-8.3.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
